# Bagel-benchmark

./: .gitignore  MANIFEST.in  README.md  setup.cfg
Graph_Classification/: models.py
Node Classification/: models.py
Node Classification/metrics/: RDT-fidelity.py
Node_Classification/: node_classification.ipynb
Node_Classification.py/: faithfulness.py
Node_Classification/Explainers/: gnnexplainer.py  grad.py  pgm.py
Node_Classification/metrics/: Correctness.py
bagel/: metrics.py  setup.cfg
bagel-benchmark/Dataset/movie_reviews/: movies_majority_human_perf.jsonl  train.jsonl
bagel-benchmark/Dataset/movie_reviews/docs/: negR_010.txt  negR_019.txt  negR_023.txt  negR_035.txt  negR_040.txt  negR_041.txt  negR_043.txt  negR_044.txt  negR_045.txt  negR_046.txt  negR_049.txt  negR_050.txt  negR_071.txt  negR_078.txt  negR_079.txt  negR_081.txt  negR_086.txt  negR_091.txt  negR_096.txt  negR_097.txt  negR_119.txt  negR_132.txt  negR_134.txt  negR_145.txt  negR_146.txt  negR_149.txt  negR_155.txt  negR_158.txt  negR_165.txt  negR_166.txt  negR_173.txt  negR_177.txt  negR_178.txt  negR_179.txt  negR_187.txt  negR_194.txt  negR_197.txt  negR_203.txt  negR_219.txt  negR_250.txt  (+269 more)
bagel/Dataset/: CiteSeer_selected_nodes.npy  Cora_selected_nodes.npy  PubMed_selected_nodes.npy  create_movie_reviews.py  empty.txt
bagel/Dataset/movie_reviews/: movies_union_human_perf.jsonl  test.jsonl  test.jsonl.bak  val.jsonl
bagel/Dataset/movie_reviews/docs/: negR_000.txt  negR_005.txt  negR_006.txt  negR_007.txt  negR_008.txt  negR_011.txt  negR_013.txt  negR_014.txt  negR_015.txt  negR_018.txt  negR_020.txt  (+1020 more)
bagel/Graph_Classification/: models.py  train_movie_reviews.py
bagel/Node_Classification/: models.py  node_classification.ipynb
bagel/Node_Classification/Explainers/: gnnexplainer.py  grad_based_explainers.py
bagel_benchmark/: .test.py.swp  metrics.py  requirements.txt  test.py
bagel_benchmark.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
bagel_benchmark/Graph_Classification/: utils_movie_reviews.py
bagel_benchmark/dataset/: create_movie_reviews.py
bagel_benchmark/explainers/: grad_explainer_edge.py  grad_explainer_graph.py  grad_explainer_node.py  pgm_explainer_graph.py
bagel_benchmark/graph_classification/: models.py  utils_movie_reviews.py
bagel_benchmark/node_classification/: node_classification.ipynb  utils.py
bagel_benchmark/run_fidelity/: edge_level.py
(+659 files in other folders)
