[metadata]
name = bagel-benchmark
description = Bagel: A Benchmark for Assessing Graph Neural Network Explanations
author = Mandeep Rathee
version = 0.1.0
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Mandeep-Rathee/Bagel-benchmark
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = .
packages = find:
python_requires = 3.10.4
install_requires =
    matplotlib=3.5.2
    networkx=2.8.3
    numpy=1.22.4
    pandas=1.4.2
    pip=21.2.4
    scikit-learn=1.1.1
    scipy=1.8.1
    torch=1.11.0
    torch-cluster=1.6.0
    torch-geometric=2.0.4
    torch-scatter=2.0.9
    torch-sparse=0.6.13
    torch-spline-conv=1.2.1
    torchtext=0.12.0

[options.packages.find]
where = .
exclude = tests
