[metadata]
name = bagel-benchmark
description = Bagel: A Benchmark for Assessing Graph Neural Network Explanations
author = Mandeep Rathee
version = 0.1.2
license = Apache
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Mandeep-Rathee/Bagel-benchmark
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache License

[options]
package_dir =
    = .
packages = find:
python_requires = ==3.10.4
install_requires =
    torch==1.11.0
    torch-cluster==1.6.0
    torch-geometric==2.0.4
    torch-scatter==2.0.9
    torch-sparse==0.6.13
    torchtext==0.12.0

[options.packages.find]
where = .
exclude = tests

